Modified the text on interface. fixed the bug that if the discription you give contains "," or ".", the content after it will not displayed on personal space. so the parameters for spring message can not contain "," or "."....

--- a/deploy/header_cn.jspx
+++ b/deploy/header_cn.jspx
@@ -196,7 +196,7 @@
       <c:out value=" || " />
       <a href="${reset_url}">
         <spring:url value="/resources/images/reset.png" var="reset_img_url" />
-        <spring:message code="global_menu_resetView" var="reset_message" htmlEscape="false" />
+        <spring:message code="global_menu_setView" var="reset_message" htmlEscape="false" />
         <img alt="${fn:escapeXml(reset_message)}" src="${reset_img_url}" title="${fn:escapeXml(reset_message)}" />
       </a>
   	  <!-- <util:theme/>  	   -->
