--- a/deploy/header_fr.jspx
+++ b/deploy/header_fr.jspx
@@ -205,10 +205,11 @@
   </form>
   <!-- Don't think this is meaningful to real user. so we leave it only in footer. <util:websiteSwitch/> -->
 
-  <spring:url var="banner" value="/resources/images/banner-graphic.png" />
-  <spring:url var="home" value="/" />
-  <spring:message code="button_home" var="home_label" htmlEscape="false" />
-  <a href="${home}" name="${fn:escapeXml(home_label)}" title="${fn:escapeXml(home_label)}">
-    <img src="${banner}" />
-  </a>
-</div>
+  <div class="headImgArea">
+	  <spring:url var="home" value="/" />
+	  <spring:message code="button_home" var="home_label" htmlEscape="false" />
+	  <a href="${home}" name="${fn:escapeXml(home_label)}" title="${fn:escapeXml(home_label)}">
+	  	<span class="emptySpan"> </span>
+	  </a>
+  </div>
+</div> 
