--- a/src/main/webapp/WEB-INF/views/header.jspx
+++ b/src/main/webapp/WEB-INF/views/header.jspx
@@ -1,3 +1,5 @@
+
+
 <div id="header" xmlns:jsp="http://java.sun.com/JSP/Page" xmlns:fn="http://java.sun.com/jsp/jstl/functions"
  xmlns:c="http://java.sun.com/jsp/jstl/core" xmlns:spring="http://www.springframework.org/tags" 
  xmlns:util="urn:jsptagdir:/WEB-INF/tags/util" version="2.0">
@@ -6,7 +8,7 @@
 
   <!-- if user has logged in, home page point to personal space, if not logged in, then point to public space -->
 <spring:url value="/resources/j_spring_security_check" var="form_url" />
-<form id="headloginform" name="f" modelAttribute="${login}" action="${fn:escapeXml(form_url)}" method="POST" style="height:20px; color: #AAAAAA">
+  <form id="headloginform" name="f" modelAttribute="${login}" action="${fn:escapeXml(form_url)}" method="POST" style="height:20px; color: #AAAAAA">
   <c:choose>
      <c:when test="${pageContext['request'].userPrincipal != null}">
      	<c:choose>
@@ -204,10 +206,11 @@
   </form>
   <!-- Don't think this is meaningful to real user. so we leave it only in footer. <util:websiteSwitch/> -->
 
-  <spring:url var="banner" value="/resources/images/banner-graphic.png" />
-  <spring:url var="home" value="/" />
-  <spring:message code="button_home" var="home_label" htmlEscape="false" />
-  <a href="${home}" name="${fn:escapeXml(home_label)}" title="${fn:escapeXml(home_label)}">
-    <img src="${banner}" />
-  </a>
+  <div class="headImgArea">
+	  <spring:url var="home" value="/" />
+	  <spring:message code="button_home" var="home_label" htmlEscape="false" />
+	  <a href="${home}" name="${fn:escapeXml(home_label)}" title="${fn:escapeXml(home_label)}">
+	  	<span class="emptySpan"> </span>
+	  </a>
+  </div>
 </div> 
