--- a/deploy/header_fr.jspx
+++ b/deploy/header_fr.jspx
@@ -70,7 +70,7 @@
       	  <spring:message code="label_rememberme" htmlEscape="false" />
         </input>
 
-        <input id="proceed" type="submit" value="${fn:escapeXml(submit_label)}" style="vertical-align:bottom; width: 0px; height: 0px; border-bottom: 0px; border-top: 0px"/>
+        <input id="proceed" type="image" value="${fn:escapeXml(submit_label)}" style="vertical-align:bottom; width: 0px; height: 0px; border-bottom: 0px; border-top: 0px"/>
 
         <script type="text/javascript">
 			dojo.addOnLoad(function() {
