--- a/src/main/webapp/WEB-INF/views/header.jspx
+++ b/src/main/webapp/WEB-INF/views/header.jspx
@@ -1,5 +1,3 @@
-
-
 <div id="header" xmlns:jsp="http://java.sun.com/JSP/Page" xmlns:fn="http://java.sun.com/jsp/jstl/functions"
  xmlns:c="http://java.sun.com/jsp/jstl/core" xmlns:spring="http://www.springframework.org/tags" 
  xmlns:util="urn:jsptagdir:/WEB-INF/tags/util" version="2.0">
@@ -72,7 +70,7 @@
       	  <spring:message code="label_rememberme" htmlEscape="false" />
         </input>
           
-        <input id="proceed" type="submit" value="${fn:escapeXml(submit_label)}" style="vertical-align:bottom; width: 0px; height: 0px; border-bottom: 0px; border-top: 0px"/>
+        <input id="proceed" type="image" value="${fn:escapeXml(submit_label)}" style="vertical-align:bottom; width: 0px; height: 0px; border-bottom: 0px; border-top: 0px"/>
         
         <script type="text/javascript">
 			dojo.addOnLoad(function() {
