added copy right and contact info, fixed the bug that when left is empty, right display too much.

--- a/src/main/webapp/WEB-INF/views/footer.jspx
+++ b/src/main/webapp/WEB-INF/views/footer.jspx
@@ -7,4 +7,8 @@
 
   <util:theme/>
   <util:websiteSwitch/>
+  <br/>
+  <div style="color: #AAAAAA; text-align: right;">
+   ©Copyright 2012 - 2013 | info@sharethegoodones.com
+  </div>
 </div>
