--- a/src/main/webapp/WEB-INF/views/public/index.jspx
+++ b/src/main/webapp/WEB-INF/views/public/index.jspx
@@ -115,5 +115,34 @@
 	  </c:forEach>
   	</td>
   </tr></table>
-  
+  <!-- <div data-dojo-type="dijit.Dialog" id="formDialog" title="Form Dialog"  execute="alert('submitted w/args:\n' + dojo.toJson(arguments[0], true));">
+    <table>
+        <tr>
+            <td><label for="date">End date: </label></td>
+            <td><input data-dojo-type="dijit.form.DateTextBox" type="text" name="edate" id="edate"/></td>
+        </tr>
+        <tr>
+            <td><label for="date">Time: </label></td>
+            <td><input data-dojo-type="dijit.form.TimeTextBox" type="text" name="time" id="time"/></td>
+        </tr>
+        <tr>
+            <td><label for="desc">Description: </label></td>
+            <td><input data-dojo-type="dijit.form.TextBox" type="text" name="desc" id="desc"/></td>
+        </tr>
+        <tr>
+            <td align="center" colspan="2">
+                <button data-dojo-type="dijit.form.Button" type="submit"
+                    data-dojo-props="onClick:function(){return dijit.byId('formDialog').isValid();}">OK</button>
+                <button data-dojo-type="dijit.form.Button" type="button"
+                    data-dojo-props="onClick:function(){dijit.byId('formDialog').hide();}">Cancel</button>
+            </td>
+        </tr>
+    </table>
+  </div>
+
+  <button id="buttonThree" data-dojo-type="dijit.form.Button" type="button">Show me!
+    <script type="dojo/method" data-dojo-event="onClick" data-dojo-args="evt">
+        dijit.byId("formDialog").show();
+    </script>
+  </button>-->
 </div>
