--- a/src/main/webapp/WEB-INF/views/public/list_detail_twitter.jspx
+++ b/src/main/webapp/WEB-INF/views/public/list_detail_twitter.jspx
@@ -3,7 +3,8 @@
  xmlns:fmt="http://java.sun.com/jsp/jstl/fmt"  xmlns:field="urn:jsptagdir:/WEB-INF/tags/form/fields" 
  xmlns:jsp="http://java.sun.com/JSP/Page" xmlns:page="urn:jsptagdir:/WEB-INF/tags/form" 
  xmlns:table="urn:jsptagdir:/WEB-INF/tags/form/fields" xmlns:form="urn:jsptagdir:/WEB-INF/tags/form" 
- xmlns:util="urn:jsptagdir:/WEB-INF/tags/util" xmlns:spring="http://www.springframework.org/tags" version="2.0">
+ xmlns:util="urn:jsptagdir:/WEB-INF/tags/util" xmlns:spring="http://www.springframework.org/tags" 
+ xmlns:springform="http://www.springframework.org/tags/form" version="2.0">
    
     <jsp:directive.page contentType="text/html;charset=UTF-8"/>
     <jsp:output omit-xml-declaration="yes"/>
@@ -28,10 +29,12 @@
     </c:if>
     
     <c:choose>
+    	<!-- if logged in -->
 		<c:when test="${pageContext['request'].userPrincipal != null}">
-		    <form:BigRemarkCreate twitterId="${twitter.id}" id="fc_com_aeiou_bigbang_domain_Remark" refreshTime="${#refreshTime}" modelAttribute="newremark" path="/remarks" render="${empty dependencies}" z="sWlU6AsGIe2//4XQNOSFZm9xQRQ=">
+		    <form:BigRemarkCreate twitterId="${twitter.id}" id="fc_com_aeiou_bigbang_domain_Remark" modelAttribute="newremark" path="/remarks" render="${empty dependencies}" z="sWlU6AsGIe2//4XQNOSFZm9xQRQ=">
 		        <field:editor field="content" id="c_com_aeiou_bigbang_domain_Remark_content" required="true" z="user-managed"/>
 		        <field:select field="authority" id="c_com_aeiou_bigbang_domain_Remark_authority" itemValue="id" items="${authorities}" path="/bigtags" z="WKNnUnIysaWMajTikzigpbQOZYE="/>
+				<springform:hidden path="refresh_time" value="${refresh_time}"/> 
 		    </form:BigRemarkCreate>
 		    
 		    <!-- set automatically refresh! -->
@@ -40,6 +43,7 @@
 		        <spring:param name="refreshTwitterid" value="${twitter['id']}"/>
 		    </spring:url>
 			<form id="RefreshTimeSettingForm" action="${RefreshTimeSettingForm_url}"  method="POST" style="text-align: left">
+			    
 			    <!-- Rss function -->
 		    	<spring:url value="/remarks" var="addRemark_url">
 	       			<spring:param name="owner" value="${spaceOwner}"/>
@@ -51,8 +55,8 @@
 		        	<spring:message code="twitter_rss_link"/>
 		      	</a>
 		      	
+			    <!-- form of refresh time -->
 			    <c:out value=" || "></c:out>
-			    
 			    <spring:message code="refresh_time" htmlEscape="false" />
 			    <input type='text' id="refreshTime" name="refreshTime" value="${refresh_time}" style="width:20px;height:12px" />
 			    <spring:message code="second" htmlEscape="false" />
@@ -63,15 +67,16 @@
 		    	</button>
 		    </form>
 	  	 </c:when>
-	  	 <c:otherwise>
+	  	 <c:otherwise>	<!-- if not logged in -->
 	  	 	<util:BigLoginNotice id="fc_com_aeiou_bigbang_domain_Remark">
 		      	<!-- set automatically refresh! -->
-				<spring:url value="/remarks" var="RefreshTimeSettingForm_url">
+				<spring:url value="/public" var="RefreshTimeSettingForm_url">
 			        <spring:param name="refreshTime" value="${#refreshTime}"/>
 			        <spring:param name="refreshTwitterid" value="${twitter['id']}"/>
 			    </spring:url>
-				<form id="RefreshTimeSettingForm" action="${RefreshTimeSettingForm_url}"  method="POST" style="text-align: left">
-			    	<!-- link to login -->
+				<form id="RefreshTimeSettingForm_Anonymous" action="${RefreshTimeSettingForm_url}"  method="POST" style="text-align: left">
+			    	
+			    	<!-- Rss function -->
 					<spring:url value="/remarks" var="addRemark_url">
 	        			<spring:param name="owner" value="${spaceOwner}"/>
 	        			<spring:param name="twitterid" value="${twitter.id}"/>
@@ -82,8 +87,8 @@
 			        	<spring:message code="global_login_notice"/>
 			      	</a>
 			      	
+			    	<!-- form of refresh time -->
 			    	<c:out value=" || "></c:out>
-			    	
 			    	<spring:message code="refresh_time" htmlEscape="false" />
 				    <input type='text' id="refreshTime" name="refreshTime" value="${refresh_time}" style="width:20px;height:12px" />
 				    <spring:message code="second" htmlEscape="false" />
@@ -100,12 +105,19 @@
 
 	<script language="JavaScript"> 
 		function myrefresh(){
+		  if(document.getElementById("_authority_id") != null){//here I hard coded, used the element id found with ff.
 			if(hasNoValue()){
 				if(${refresh_time} > 0)
 					document.getElementById("RefreshTimeSettingForm").submit();//location.replace(location.href) 		//window.location.reload();  @NOTE:difference is that reload cause the notice dialog(data will be supply again.)
 					//omvc = window.open("http://localhost/bigbang/","boxDetail","width=550,height=350,resizable=1,scrollbars=0,status=no,toolbar=no,location=no,menu=no");
 					//omvc.focus();
 			}
+		  }else{
+				if(${refresh_time} > 0)
+					document.getElementById("RefreshTimeSettingForm_Anonymous").submit();//location.replace(location.href) 		//window.location.reload();  @NOTE:difference is that reload cause the notice dialog(data will be supply again.)
+
+		  }
+			  
 		} 
 		setTimeout('myrefresh()', ${refresh_time * 1000});
 
@@ -151,7 +163,6 @@
 				document.title = message.title;
 			}
 		};
-		
 		if(${newMessageNumber} > 0){
 			message.show();		
 			document.onclick = function() {
