--- a/src/main/webapp/WEB-INF/layouts/default.jspx
+++ b/src/main/webapp/WEB-INF/layouts/default.jspx
@@ -15,7 +15,7 @@
 		<title><spring:message code="welcome_h3"/></title>
 	</head>
 	
-  	<body class="tundra spring" >
+  	<body class="tundra spring" background="getImage/${spaceOwnerName}">
    		<div id="wrapper">
 		    <tiles:insertAttribute name="header" ignore="true" />
 		    <tiles:insertAttribute name="menu" ignore="true" />   
