--- a/src/main/webapp/WEB-INF/views/useraccounts/update.jspx
+++ b/src/main/webapp/WEB-INF/views/useraccounts/update.jspx
@@ -9,9 +9,10 @@
      <table class="gallery" style="border-width: 0px; background-color: #ddd;"><tbody>
 	     <tr>
 	     	<td valign="middle" align="center" colspan="2">
-		     	<util:panel title="Title Image" id="titleImagePanel">
+	     		<spring:message code="useraccount_update_headimage" var="title_image" htmlEscape="false" />
+		     	<util:panel title="${title_image}" id="titleImagePanel">
 		     	 	<div style="text-align: center;">
-				       	 <img src="getImage/uc_${fn:toLowerCase(pageContext['request'].userPrincipal.name)}_headimage" alt="Please Select a image to appear on title area"/>
+				       	 <img src="getImage/uc_${fn:toLowerCase(pageContext['request'].userPrincipal.name)}_headimage" alt="[${title_image}]"/>
 				       	 <spring:url value="/mediauploads" var="form_url"/>
 					     <springform:form action="${form_url}" method="POST" modelAttribute="mediaUpload" enctype="multipart/form-data">
 					      	<span>
@@ -41,7 +42,8 @@
 			    </form:update>
 	       </td>
 	       <td valign="middle" align="center" width="40%">
-	       	 <img src="getImage/uc_${fn:toLowerCase(pageContext['request'].userPrincipal.name)}_bg" alt="backgroud tiles"/>
+	         <spring:message code="useraccount_update_bg" var="bg_image" htmlEscape="false" />
+	       	 <img src="getImage/uc_${fn:toLowerCase(pageContext['request'].userPrincipal.name)}_bg" alt="[${bg_image}]"/>
 	       	 <spring:url value="/mediauploads" var="form_url"/>
 		     <springform:form action="${form_url}" method="POST" modelAttribute="mediaUpload" enctype="multipart/form-data">
 		      	<span>
