changed a theme:the No.4 changed from circle to cloud。the head images is not dumped, it moved to No.5 theme

--- a/src/main/webapp/styles/4.css
+++ b/src/main/webapp/styles/4.css
@@ -1,6 +1,6 @@
 /* main elements */
 .headImgArea {
-	background-image: url(../images/bg/head4.png);
+	background-image: url(../images/bg/head4.jpg);
 	background-repeat: no-repeat;
 	background-position: 0px 0px;
 	top: 0px;
